// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Spinner cover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 60px;
  border: 12px solid rgb(0,130,155);
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: eXzyYY 0.75s linear infinite;
  animation: eXzyYY 0.75s linear infinite;
}

.c0 {
  position: fixed;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
}

<div
  class="c0"
  data-testid="spinner"
>
  <div
    class="c1"
    color="rgb(0, 130, 155)"
    size="60"
  />
</div>
`;

exports[`Storyshots Components/Spinner not cover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 30px;
  height: 30px;
  border: 6px solid rgb(0,130,155);
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: eXzyYY 0.75s linear infinite;
  animation: eXzyYY 0.75s linear infinite;
}

.c0 {
  position: fixed;
  z-index: 1000;
  bottom: 0;
  right: 0;
  padding: 12px;
}

<div
  class="c0"
  data-testid="spinner"
>
  <div
    class="c1"
    color="rgb(0, 130, 155)"
    size="30"
  />
</div>
`;
